Add docker build, minor api tweaks
