# swagger.yml
@@ -6,7 +6,7 @@ info:
   contact:
     email: campbelljip@gmail.com
 paths:
-  /raps:
+  /raps/get-all:
     get:
       summary: Retrieves all raps
       description: |
@@ -49,6 +49,7 @@ components:
       required:
         - id
         - title
+        - bonus
         - rapper
         - imageUrl
         - appearedAt
@@ -60,6 +61,9 @@ components:
         title:
           type: string
           example: I Get Money
+        bonus:
+          type: boolean
+          example: false
         rapper:
           type: string
           example: Campbell Pedersen
@@ -75,7 +79,9 @@ components:
       properties:
         name:
           type: string
-          example: 'Big Smash Day and Cube'
+          example: BSDAC
+          enum:
+            - BSDAC
         series:
           type: integer
           example: 11
